# VulkanTest

./: .clang-format  .clang-format_old  .clang-tidy  .gitignore  CMakeLists.txt  build.bat  build.ps1  compile_shaders.bat  oldbuild.bat  source_files.cmake  update_source_files.py
libs/glm/: manual.md
libs/glm/doc/api/: a00025.html  a00025_source.html  a00125.html  a00125_source.html  a00176_source.html  a00299.html  a00319.html
libs/glm/glm/detail/: type_quat.hpp  type_quat.inl
libs/glm/glm/gtc/: quaternion.hpp
src/: definitions.h  main.cpp  main.h
src/pch/: glm.h  stdlib.h
src/utils/: logger.cpp  logger.h
